--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "front-end",
+  "name": "easy-car-rental-system-front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
-    "@mui/joy": "^5.0.0-alpha.36",
-    "@mui/material": "^5.8.7",
-    "@mui/styles": "^5.8.7",
-    "@mui/x-date-pickers": "^5.0.0-beta.0",
+    "@mui/material": "^5.9.0",
+    "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.1.2",
+    "remixicon": "^2.5.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
