--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
