--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-form-validator-core": "^1.1.2",
+    "react-material-ui-form-validator": "^3.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
