--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
+    "material-ui-popup-state": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
