--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.1.2",
+    "recharts": "^2.0.0-beta.1",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
